adjust padding-right for news-item__content, change no result search message color, fixed news-category-route overflow for content-section

--- a/src/components/news-category-route/news-category-route.styles.css
+++ b/src/components/news-category-route/news-category-route.styles.css
@@ -2,7 +2,7 @@
 .category-route-container {
   width: 55%;
   padding: 20px;
-  background-color: #f7f7f7;
+  /* background-color: #f7f7f7; */
   border-radius: 8px;
   margin: 20px auto;
   max-width: 1200px;
@@ -29,10 +29,9 @@
 
 .category-content-section {
   gap: 16px;
-  padding: 35px;
+  padding: 25px;
   padding-bottom: 0;
   border-radius: 8px;
-  width: 100%; /* Shrink the main content to 80% of the page width */
   margin: 0 auto;
   background-color: #ffffff;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
